// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 irhUlt"
    href={null}
    id={null}
    media="https://cdn.facilityexecutive.com/wp-content/uploads/2019/09/38391858_ml-800x418-1-574x300.jpg"
    onClick={[Function]}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 Card__Media-sc-1g3s676-2 fjpAGz"
    >
      <img
        alt="Media Description"
        className="Image__ImageWrapper-sc-18abvff-0 hXzVKy Card__CardImage-sc-1g3s676-3 hDDBde"
        onClick={null}
        src="https://cdn.facilityexecutive.com/wp-content/uploads/2019/09/38391858_ml-800x418-1-574x300.jpg"
        title="Media Description"
        width="100%"
      />
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Expander__HeaderWrapper-sc-147204-0 insQpf"
        id={null}
        onClick={[Function]}
      >
        <div
          className="Bar__BarLayout-icfo76-2 bRGQtj"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 boCGaE"
          >
            <div
              className="Avatar__TagContainer-sc-1vuf9om-2 dqLiae"
              id={null}
              onClick={null}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-bookmark fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 bpsbMF"
                color={null}
                data-icon="bookmark"
                data-prefix="fas"
                focusable="false"
                fontSize="1.35em"
                id={null}
                role="img"
                style={Object {}}
                viewBox="0 0 384 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 512V48C0 21.49 21.49 0 48 0h288c26.51 0 48 21.49 48 48v464L192 400 0 512z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
          <div
            className="Bar__Slot-icfo76-1 bOWYHS"
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 exoZGd"
              fontSize="1em"
              fontWeight={400}
              letterSpacing="0px"
            >
              Card Title
            </h6>
            <p
              className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
              fontSize="1em"
              fontWeight={400}
              id={null}
              letterSpacing="0px"
            >
              Card Description
            </p>
          </div>
          <div
            className="Bar__Slot-icfo76-1 cxljst"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-angle-up fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 bpsbMF"
              color={null}
              data-icon="angle-up"
              data-prefix="far"
              focusable="false"
              fontSize="1.35em"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M168.5 164.2l148 146.8c4.7 4.7 4.7 12.3 0 17l-19.8 19.8c-4.7 4.7-12.3 4.7-17 0L160 229.3 40.3 347.8c-4.7 4.7-12.3 4.7-17 0L3.5 328c-4.7-4.7-4.7-12.3 0-17l148-146.8c4.7-4.7 12.3-4.7 17 0z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Expander__ChildrenWrapper-sc-147204-1 vUVBh"
        open={false}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 ofhtC"
          disabled={false}
          htmlFor={null}
          id={null}
          name={null}
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
              fontSize="0.876em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="0px"
            >
              Button
            </label>
          </section>
        </button>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kBKBDh"
      id={null}
      onClick={[Function]}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 dXlnlj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 blSqfx"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 hTtmaE"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
              id={null}
              label="Command One"
              onClick={[Function]}
              title="Command One"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 gFLpkg Command__CommandName-sc-13akgtp-1 dvXFgs"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0px"
              >
                Command One
              </label>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
              id={null}
              label="Command Two"
              onClick={[Function]}
              title="Command Two"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 gFLpkg Command__CommandName-sc-13akgtp-1 dvXFgs"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0px"
              >
                Command Two
              </label>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-icfo76-1 ecRRXN"
        >
          <a
            className="Menu__MenuContainer-sc-17iwn6x-0 lhgeCh"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 bpsbMF"
              color={null}
              data-icon="ellipsis-v"
              data-prefix="far"
              focusable="false"
              fontSize="1.35em"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 128 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </a>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
    href={null}
    id={null}
    media={null}
    onClick={null}
  />
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
    href={null}
    id={null}
    media={null}
    onClick={false}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bRGQtj"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 boCGaE"
        >
          <div
            className="Avatar__TagContainer-sc-1vuf9om-2 dqLiae"
            id={null}
            onClick={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 exoZGd Avatar__AvatarText-sc-1vuf9om-0 lbHnkX"
              fontSize="1em"
              fontWeight={400}
              letterSpacing="0px"
            >
              GP
            </h6>
          </div>
        </div>
        <div
          className="Bar__Slot-icfo76-1 yvaBx"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 cLteVL"
            fontSize="1em"
            fontWeight={600}
            letterSpacing="0px"
          >
            Card Title
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
            fontSize="1em"
            fontWeight={600}
            id={null}
            letterSpacing="0px"
          >
            Card Description
          </p>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={false}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 dXlnlj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 blSqfx"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 hTtmaE"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
              id={null}
              label="Command One"
              onClick={[Function]}
              title="Command One"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 gFLpkg Command__CommandName-sc-13akgtp-1 dvXFgs"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0px"
              >
                Command One
              </label>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
              id={null}
              label="Command Two"
              onClick={[Function]}
              title="Command Two"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 gFLpkg Command__CommandName-sc-13akgtp-1 dvXFgs"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0px"
              >
                Command Two
              </label>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-icfo76-1 ecRRXN"
        >
          <a
            className="Menu__MenuContainer-sc-17iwn6x-0 lhgeCh"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 bpsbMF"
              color={null}
              data-icon="ellipsis-v"
              data-prefix="far"
              focusable="false"
              fontSize="1.35em"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 128 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </a>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[` 4`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 irhUlt"
    href={null}
    id={null}
    media={null}
    onClick={true}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bRGQtj"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <a
            className="Card__LinkedWrapper-sc-1g3s676-0 bKLMdk"
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 cLteVL"
              fontSize="1em"
              fontWeight={600}
              letterSpacing="0px"
            >
              Linkable Card
            </h6>
            <p
              className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
              fontSize="1em"
              fontWeight={600}
              id={null}
              letterSpacing="0px"
            >
              This creates an a tag wrapper
            </p>
          </a>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[` 5`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW"
    id={null}
    rows={null}
  >
    <div
      className="Card__CardWrapper-sc-1g3s676-5 kZnQzv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__BarLayout-icfo76-2 bRGQtj"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 RjiBe"
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
              fontSize="1em"
              fontWeight={600}
              id={null}
              letterSpacing="0px"
            >
              None
            </p>
          </div>
        </div>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__BarLayout-icfo76-2 bRGQtj"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 RjiBe"
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
              fontSize="1em"
              fontWeight={600}
              id={null}
              letterSpacing="0px"
            >
              Standard
            </p>
          </div>
        </div>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cEBIcs"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__BarLayout-icfo76-2 bRGQtj"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 RjiBe"
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
              fontSize="1em"
              fontWeight={600}
              id={null}
              letterSpacing="0px"
            >
              2x
            </p>
          </div>
        </div>
      </section>
    </div>
  </section>
</div>
`;

exports[` 6`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 bcIGrH Card__CardGridWrapper-sc-1g3s676-6 dhWlYr"
    id={null}
    rows={null}
  >
    <div
      className="Card__CardWrapper-sc-1g3s676-5 irhUlt"
      href={null}
      id="a"
      media={Object {}}
      onClick={[Function]}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 Card__Media-sc-1g3s676-2 gMQnyI"
      >
        <iframe
          allow="fullscreen"
          allowFullScreen={true}
          frameBorder="0"
          src={Object {}}
          title="ModernExterior 1"
          width="100%"
        />
      </section>
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 gXIWLn"
        id={null}
        onClick={null}
      >
        <div
          className="Expander__HeaderWrapper-sc-147204-0 insQpf"
          id={null}
          onClick={[Function]}
        >
          <div
            className="Bar__BarLayout-icfo76-2 bRGQtj"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 boCGaE"
            >
              <div
                className="Avatar__TagContainer-sc-1vuf9om-2 dqLiae"
                id={null}
                onClick={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-bookmark fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 bpsbMF"
                  color={null}
                  data-icon="bookmark"
                  data-prefix="fas"
                  focusable="false"
                  fontSize="1.35em"
                  id={null}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 384 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 512V48C0 21.49 21.49 0 48 0h288c26.51 0 48 21.49 48 48v464L192 400 0 512z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </div>
            </div>
            <div
              className="Bar__Slot-icfo76-1 bOWYHS"
            >
              <h6
                className="Typography__TitleText-sc-19auepv-2 exoZGd"
                fontSize="1em"
                fontWeight={400}
                letterSpacing="0px"
              >
                First Card
              </h6>
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                Card Description Goes Here
              </p>
            </div>
            <div
              className="Bar__Slot-icfo76-1 cxljst"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-angle-up fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 bpsbMF"
                color={null}
                data-icon="angle-up"
                data-prefix="far"
                focusable="false"
                fontSize="1.35em"
                id={null}
                role="img"
                style={Object {}}
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M168.5 164.2l148 146.8c4.7 4.7 4.7 12.3 0 17l-19.8 19.8c-4.7 4.7-12.3 4.7-17 0L160 229.3 40.3 347.8c-4.7 4.7-12.3 4.7-17 0L3.5 328c-4.7-4.7-4.7-12.3 0-17l148-146.8c4.7-4.7 12.3-4.7 17 0z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          className="Expander__ChildrenWrapper-sc-147204-1 vUVBh"
          open={false}
        >
          <div
            className="MediaBlock__Block-k78dm4-0 jXgttR"
            id={null}
            onClick={null}
          >
            <section
              className="MediaBlock__Media-k78dm4-1 kxoljg"
            >
              <img
                alt="This is alt text for this image"
                className="Image__ImageWrapper-sc-18abvff-0 driND"
                onClick={null}
                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
                title="This is alt text for this image"
                width={null}
              />
            </section>
            <section
              className="MediaBlock__Body-k78dm4-2 koHCVu"
            >
              <h6
                className="Typography__TitleText-sc-19auepv-2 exoZGd"
                fontSize="1em"
                fontWeight={400}
                letterSpacing="0px"
              >
                Media Block
              </h6>
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                In life you need colors. We'll put a happy little sky in here. Now we can begin working on lots of happy little things. In this world, everything can be happy. 
              </p>
            </section>
          </div>
        </div>
      </section>
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 kBKBDh"
        id={null}
        onClick={[Function]}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
          fontSize="1em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </p>
      </section>
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 dXlnlj"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__BarLayout-icfo76-2 blSqfx"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 fNcQEg"
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
              id={null}
              label="Command One"
              onClick={null}
              title="Command One"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 gFLpkg Command__CommandName-sc-13akgtp-1 dvXFgs"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0px"
              >
                Command One
              </label>
            </a>
          </div>
        </div>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 irhUlt"
      href={null}
      id="b"
      media={Object {}}
      onClick={[Function]}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 Card__Media-sc-1g3s676-2 gMQnyI"
      >
        <iframe
          allow="fullscreen"
          allowFullScreen={true}
          frameBorder="0"
          src={Object {}}
          title="ModernExterior 2"
          width="100%"
        />
      </section>
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 jVKRck"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__BarLayout-icfo76-2 bRGQtj"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 boCGaE"
          >
            <div
              className="Avatar__TagContainer-sc-1vuf9om-2 dqLiae"
              id={null}
              onClick={null}
            >
              <h6
                className="Typography__TitleText-sc-19auepv-2 exoZGd Avatar__AvatarText-sc-1vuf9om-0 lbHnkX"
                fontSize="1em"
                fontWeight={400}
                letterSpacing="0px"
              >
                GP
              </h6>
            </div>
          </div>
          <div
            className="Bar__Slot-icfo76-1 yvaBx"
          >
            <a
              className="Card__LinkedWrapper-sc-1g3s676-0 bKLMdk"
            >
              <h6
                className="Typography__TitleText-sc-19auepv-2 cLteVL"
                fontSize="1em"
                fontWeight={600}
                letterSpacing="0px"
              >
                Second Card
              </h6>
            </a>
          </div>
        </div>
      </section>
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 kBKBDh"
        id={null}
        onClick={[Function]}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
          fontSize="1em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        </p>
      </section>
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 dXlnlj"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__BarLayout-icfo76-2 blSqfx"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 hTtmaE"
          >
            <section
              className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW"
              id={null}
              rows={null}
            >
              <a
                className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
                id={null}
                label="Command One"
                onClick={null}
                title="Command One"
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 gFLpkg Command__CommandName-sc-13akgtp-1 dvXFgs"
                  fontSize="0.876em"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing="0px"
                >
                  Command One
                </label>
              </a>
              <a
                className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
                id={null}
                label="Command Two"
                onClick={null}
                title="Command Two"
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 gFLpkg Command__CommandName-sc-13akgtp-1 dvXFgs"
                  fontSize="0.876em"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing="0px"
                >
                  Command Two
                </label>
              </a>
            </section>
          </div>
          <div
            className="Bar__Slot-icfo76-1 ecRRXN"
          >
            <span>
               
            </span>
          </div>
        </div>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 irhUlt"
      href={null}
      id="c"
      media={Object {}}
      onClick={[Function]}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 Card__Media-sc-1g3s676-2 gMQnyI"
      >
        <iframe
          allow="fullscreen"
          allowFullScreen={true}
          frameBorder="0"
          src={Object {}}
          title="ModernExterior 3"
          width="100%"
        />
      </section>
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 dmRwHE"
        id={null}
        onClick={null}
      >
        <div
          className="Expander__HeaderWrapper-sc-147204-0 insQpf"
          id={null}
          onClick={[Function]}
        >
          <div
            className="Bar__BarLayout-icfo76-2 bRGQtj"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 boCGaE"
            >
              <div
                className="Avatar__TagContainer-sc-1vuf9om-2 dqLiae"
                id={null}
                onClick={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-home-alt fa-w-18 Icon__StyledIcon-sc-1oa9m1v-1 bpsbMF"
                  color={null}
                  data-icon="home-alt"
                  data-prefix="fas"
                  focusable="false"
                  fontSize="1.35em"
                  id={null}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </div>
            </div>
            <div
              className="Bar__Slot-icfo76-1 bOWYHS"
            >
              <h6
                className="Typography__TitleText-sc-19auepv-2 exoZGd"
                fontSize="1em"
                fontWeight={400}
                letterSpacing="0px"
              >
                Third Card
              </h6>
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                Nothing To See Here
              </p>
            </div>
            <div
              className="Bar__Slot-icfo76-1 cxljst"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-angle-up fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 bpsbMF"
                color={null}
                data-icon="angle-up"
                data-prefix="far"
                focusable="false"
                fontSize="1.35em"
                id={null}
                role="img"
                style={Object {}}
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M168.5 164.2l148 146.8c4.7 4.7 4.7 12.3 0 17l-19.8 19.8c-4.7 4.7-12.3 4.7-17 0L160 229.3 40.3 347.8c-4.7 4.7-12.3 4.7-17 0L3.5 328c-4.7-4.7-4.7-12.3 0-17l148-146.8c4.7-4.7 12.3-4.7 17 0z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          className="Expander__ChildrenWrapper-sc-147204-1 vUVBh"
          open={false}
        >
          <button
            className="Button__StyledButton-sc-1v7sls2-0 hjYGt"
            disabled={false}
            htmlFor={null}
            id={null}
            name={null}
            onClick={null}
            tabIndex="1"
            type="button"
          >
            <section
              className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
              id={null}
              rows={null}
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
                fontSize="0.876em"
                fontWeight={600}
                htmlFor={null}
                letterSpacing="0px"
              >
                Button
              </label>
            </section>
          </button>
        </div>
      </section>
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 kBKBDh"
        id={null}
        onClick={[Function]}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
          fontSize="1em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
      </section>
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 dXlnlj"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__BarLayout-icfo76-2 blSqfx"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 hTtmaE"
          >
            <section
              className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW"
              id={null}
              rows={null}
            >
              <a
                className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
                id={null}
                label="Command One"
                onClick={null}
                title="Command One"
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 gFLpkg Command__CommandName-sc-13akgtp-1 dvXFgs"
                  fontSize="0.876em"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing="0px"
                >
                  Command One
                </label>
              </a>
              <a
                className="Command__CommandContainer-sc-13akgtp-0 dWqRBY"
                id={null}
                label="Command Two"
                onClick={null}
                title="Command Two"
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 gFLpkg Command__CommandName-sc-13akgtp-1 dvXFgs"
                  fontSize="0.876em"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing="0px"
                >
                  Command Two
                </label>
              </a>
            </section>
          </div>
          <div
            className="Bar__Slot-icfo76-1 ecRRXN"
          >
            <a
              className="Menu__MenuContainer-sc-17iwn6x-0 lhgeCh"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 bpsbMF"
                color={null}
                data-icon="ellipsis-v"
                data-prefix="far"
                focusable="false"
                fontSize="1.35em"
                id={null}
                role="img"
                style={Object {}}
                viewBox="0 0 128 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </a>
          </div>
        </div>
      </section>
    </div>
  </section>
</div>
`;

exports[` 7`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 bcIGrH Card__CardGridWrapper-sc-1g3s676-6 dhWlYr"
    id={null}
    rows={null}
  >
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
      href={null}
      id={null}
      media={null}
      onClick={null}
    />
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
      href={null}
      id={null}
      media={null}
      onClick={null}
    />
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
      href={null}
      id={null}
      media={null}
      onClick={null}
    />
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
      href={null}
      id={null}
      media={null}
      onClick={null}
    />
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
      href={null}
      id={null}
      media={null}
      onClick={null}
    />
    <div
      className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
      href={null}
      id={null}
      media={null}
      onClick={null}
    />
  </section>
</div>
`;
